--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="title_dishes">Dishes</string>
     <string name="title_order">Orders</string>
     <string name="title_report">Report</string>
+    <string name="edit_dish">Edit dish</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
