--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,5 +28,7 @@
 
     <string name="welcome_splash_screen">Welcome to admin app</string>
     <string name="username">Username</string>
+    <string name="add_product">Add product</string>
+    <string name="products">Products</string>
 
 </resources>
