--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,7 @@
     <string name="username">Username</string>
     <string name="add_product">Add product</string>
     <string name="products">Products</string>
+    <string name="new_product">New Product</string>
+    <string name="product_name">Product\'s Name</string>
+    <string name="price">Price</string>
 </resources>
