--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,13 @@
     <!-- TODO: Remove or change this placeholder text -->
 
     <string name="welcome_splash_screen">Welcome to admin app</string>
+    <string name="delete_product">Delete Product</string>
+    <string name="delete_product_alert">Are you sure to delete this product?</string>
+    <string name="cancel">Cancel</string>
+    <string name="save_product">Save Product</string>
+    <string name="save_confirm">Do you want to save these changes?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
     <string name="username">Username</string>
     <string name="add_product">Add product</string>
     <string name="new_product">New Product</string>
