--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="status">Status</string>
     <string name="save">Save</string>
     <string name="products">Products</string>
+    <string name="title_profile">Profile</string>
 </resources>
