--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,10 @@
     <string name="save">Save</string>
     <string name="products">Products</string>
     <string name="title_profile">Profile</string>
+    <string-array name="status_list">
+        <item>Pending</item>
+        <item>Preparing</item>
+        <item>Shipping</item>
+        <item>Completed</item>
+    </string-array>
 </resources>
