--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,6 @@
     <string name="save">Save</string>
     <string name="products">Products</string>
     <string name="title_profile">Profile</string>
+    <string name="user_profile_avatar">User profile avatar</string>
+    <string name="profile">Profile &amp; Address</string>
 </resources>
