--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="your_eatery_is_here">Your eatery is here</string>
     <string name="please_select_location">Please select location</string>
     <string name="total">Total: %1$s</string>
+    <string name="report">Report</string>
 </resources>
