--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="total">Total: %1$s</string>
     <string name="report">Report</string>
     <string name="order_detail">Order detail</string>
+    <string name="change">Change</string>
 </resources>
