--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,7 +71,7 @@
     <string name="select">select</string>
     <string name="your_eatery_is_here">Your eatery is here</string>
     <string name="please_select_location">Please select location</string>
-    <string name="total">Total: %1$s</string>
+    <string name="total">Total: $%1$s</string>
     <string name="report">Report</string>
     <string name="order_detail">Order detail</string>
     <string name="change">Change</string>
