Update splash screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -78,4 +78,8 @@
     <string name="events">Events</string>
     <string name="subscribe">Subscribe</string>
     <string name="unsubscribe">Unsubscribe</string>
+    <string name="ingredient">Ingredient</string>
+    <string name="edit_product">Edit Product</string>
+    <string name="delete">Delete</string>
+    <string name="select_image">Select Image</string>
 </resources>
